# GPSTRACKINGAPP

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  next.config.js  package-lock.json  package.json  test.cpp  vercel.json
src/app/: globals.css  layout.js  page.js
src/app/admin/: page.js
src/app/api/auth/login/: route.js
src/app/api/gps/live/: route.js
src/app/api/gps/toggle/: route.js
src/app/api/users/: route.js
src/app/api/vehicles/: route.js
src/app/live-tracking/: page.js
src/app/login/: page.js
src/app/vehicles/: page.js
src/core/: car_tracking.cpp  gps_server.cpp  gps_tracker.cpp
